navigation float added

--- a/index.html
+++ b/index.html
@@ -10,6 +10,58 @@
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+  <main>
 
+    <nav class="float-nav">
+      
+      <ul class="navigation-items">
+        <li class="nav-item">
+          <a href="#articles" class="nav-item__link red-hover">
+            <i data-feather="grid" class="icon"></i>
+            <span class="link-text">
+              All
+            </span>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a href="#articles" class="nav-item__link red-hover">
+            <i data-feather="code" class="icon"></i>
+            <span class="link-text">
+              Playground
+            </span>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a href="#articles" class="nav-item__link red-hover">
+            <i data-feather="file-text" class="icon"></i>
+            <span class="link-text">
+              Articles
+            </span>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a href="#articles" class="nav-item__link red-hover">
+            <i data-feather="folder" class="icon"></i>
+            <span class="link-text">
+              Projects
+            </span>
+          </a>
+        </li>
+      </ul>
+
+      <div class="navigation red-hover">
+        <i data-feather="search" class="icon"></i>
+      </div>
+
+     
+
+
+    </nav>
+  </main>
+
+  <script src="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.js"></script>
+  <script>
+    feather.replace()
+  </script>
 </body>
 </html>
