--- a/index.html
+++ b/index.html
@@ -12,6 +12,40 @@
 <body>
   <main>
 
+    <header class="header">
+      <h1 class="title">
+        SANTIAGO GUERRA
+      </h1>
+      <p class="subtitle">Full-stack Developer</p>
+
+      <p class="text-center description">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean eu augue vel est congue varius non ac nunc. Proin tristique pulvinar mauris, non suscipit magna. Nulla tincidunt, ex quis dapibus auctor, mi magna sing elit.
+      </p>
+
+      <ul class="social-icons">
+        <li>
+          <a href="#" class="social-link github">
+            <i data-feather="github"></i>
+          </a>
+        </li>
+        <li>
+          <a href="#" class="social-link linkedin">
+            <i data-feather="linkedin"></i>
+          </a>
+        </li>
+        <li>
+          <a href="#" class="social-link twitter">
+            <i data-feather="twitter"></i>
+          </a>
+        </li>
+      </ul>
+
+      <a href="" class="btn">
+
+        Message me!
+      </a>
+    </header>
+
     <nav class="float-nav">
       
       <ul class="navigation-items">
