--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-  <main>
+  <main class="main">
 
     <header class="header">
       <h1 class="title">
@@ -45,6 +45,10 @@
         Message me!
       </a>
     </header>
+
+    <section class="section">
+      
+    </section>
 
     <nav class="float-nav">
       
