--- a/index.html
+++ b/index.html
@@ -47,7 +47,27 @@
     </header>
 
     <section class="section">
-      
+      <div class="card">
+        <img src="https://mir-s3-cdn-cf.behance.net/project_modules/max_1200/0f172c70447265.5ba3ab9a81e28.jpg" alt="" class="card-image">
+        <div class="card-description">
+          <div class="card-content">
+            <h2 class="card-title">
+              Restaurant
+            </h2>
+            <p class="card-subtitle">
+              Single Web Application
+            </p>
+            <p class="card-text">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque ac quam metus. Curabitur et 
+            </p>
+          </div>
+          <div class="card-extra">
+            <a href="#" class="card-extra__link">Live Preview <i data-feather="chevron-right"></i></a>
+            <a href="#" class="card-extra__link">Source Code <i data-feather="chevron-right"></i></a>
+
+          </div>
+        </div>
+      </div>
     </section>
 
     <nav class="float-nav">
