added some extra data

--- a/index.html
+++ b/index.html
@@ -24,30 +24,30 @@
 
       <ul class="social-icons">
         <li>
-          <a href="#" class="social-link github">
+          <a href="https://github.com/SantiagoGuerra" class="social-link github" target="_BLANK">
             <i data-feather="github"></i>
           </a>
         </li>
         <li>
-          <a href="#" class="social-link linkedin">
+          <a href="https://www.linkedin.com/in/santiago--guerra/" class="social-link linkedin" target="_BLANK">
             <i data-feather="linkedin"></i>
           </a>
         </li>
         <li>
-          <a href="#" class="social-link twitter">
+          <a href="https://twitter.com/dedalo_g" class="social-link twitter" target="_BLANK">
             <i data-feather="twitter"></i>
           </a>
         </li>
       </ul>
 
-      <a href="" class="btn">
+      <a href="mailto:guerrasantiago19@gmail.com" class="btn" target="_BLANK">
 
         Message me!
       </a>
     </header>
 
     <section class="section">
-      <div class="card">
+      <!-- <div class="card">
         <img src="https://mir-s3-cdn-cf.behance.net/project_modules/max_1200/0f172c70447265.5ba3ab9a81e28.jpg" alt="" class="card-image">
         <div class="card-description">
           <div class="card-content">
@@ -67,6 +67,11 @@
 
           </div>
         </div>
+      </div> -->
+    
+      <div class="message">
+        <h2>UNDER CONSTRUCTION</h2>
+        <p>Currently i'm working in this portafolio, you will see my projects soon </p>
       </div>
     </section>
 
