--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <p class="subtitle">Full-stack Developer</p>
 
       <p class="text-center description">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean eu augue vel est congue varius non ac nunc. Proin tristique pulvinar mauris, non suscipit magna. Nulla tincidunt, ex quis dapibus auctor, mi magna sing elit.
+        From a very young age I have been very curious, throughout my life I have filled myself with knowledge related to the world of Software development, whose knowledge I share every day in various projects. I am always willing to help and contribute to my team. My passions are numbers, technology and programming.
       </p>
 
       <ul class="social-icons">
