Take off card comment to see the content

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </header>
 
     <section class="section">
-      <!-- <div class="card">
+      <div class="card">
         <img src="https://mir-s3-cdn-cf.behance.net/project_modules/max_1200/0f172c70447265.5ba3ab9a81e28.jpg" alt="" class="card-image">
         <div class="card-description">
           <div class="card-content">
@@ -78,12 +78,12 @@
 
           </div>
         </div>
-      </div> -->
+      </div>
     
-      <div class="message">
+      <!-- <div class="message">
         <h2>UNDER CONSTRUCTION</h2>
         <p>Currently i'm working in this portafolio, you will see my projects soon </p>
-      </div>
+      </div> -->
     </section>
 
     <nav class="float-nav">
