--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,6 @@
   <title>Santiago's Portafolio</title>
 
    <link href="https://fonts.googleapis.com/css?family=Poppins:400,600,700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="css/styles.css">
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-157770545-1"></script>
@@ -23,7 +22,7 @@
 <body>
   <main class="main">
 
-    <header class="header">
+    <!-- <header class="header">
       <h1 class="title">
         SANTIAGO GUERRA
       </h1>
@@ -55,7 +54,7 @@
 
         Message me!
       </a>
-    </header>
+    </header> -->
 
     <section class="section">
       <div class="card">
