Add project statically

--- a/src/index.html
+++ b/src/index.html
@@ -89,38 +89,38 @@
             </div>
           </div>
           <div class="card slide" id="slide-2">
-            <img src="https://mir-s3-cdn-cf.behance.net/project_modules/max_1200/0f172c70447265.5ba3ab9a81e28.jpg" alt="" class="card-image">
+            <img src="https://cdnfast.imfast.io/screenshot-social-network.png" alt="" class="card-image">
             <div class="card-description">
               <div class="card-content">
                 <h2 class="card-title">
-                  Restaurant
+                  Social Network
                 </h2>
                 <p class="card-subtitle">
-                  Single Web Application
+                  Ruby on Rails App
                 </p>
                 <p class="card-text">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque ac quam metus. Curabitur et 
+                  A social network where you can share posts, receive likes and comments
                 </p>
               </div>
               <div class="card-extra">
-                <a href="#" class="card-extra__link">Live Preview <i data-feather="chevron-right"></i></a>
-                <a href="#" class="card-extra__link">Source Code <i data-feather="chevron-right"></i></a>
+                <a href="https://peaceful-cove-83770.herokuapp.com/users/sign_up" class="card-extra__link">Live Preview <i data-feather="chevron-right"></i></a>
+                <a href="https://github.com/gagc056/facebook-clone" class="card-extra__link">Source Code <i data-feather="chevron-right"></i></a>
     
               </div>
             </div>
           </div>
           <div class="card slide" id="slide-3">
-            <img src="https://mir-s3-cdn-cf.behance.net/project_modules/max_1200/0f172c70447265.5ba3ab9a81e28.jpg" alt="" class="card-image">
+            <img src="https://cdnfast.imfast.io/rsz_screenshot.png" alt="" class="card-image">
             <div class="card-description">
               <div class="card-content">
                 <h2 class="card-title">
-                  Restaurant
+                  Endless Runner
                 </h2>
                 <p class="card-subtitle">
-                  Single Web Application
+                  JavaScript Video Game
                 </p>
                 <p class="card-text">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque ac quam metus. Curabitur et 
+                  Using JavaScript to develop a fun video game where you can run and eat delicious apples
                 </p>
               </div>
               <div class="card-extra">
@@ -131,22 +131,22 @@
             </div>
           </div>
           <div class="card slide" id="slide-4">
-            <img src="https://mir-s3-cdn-cf.behance.net/project_modules/max_1200/0f172c70447265.5ba3ab9a81e28.jpg" alt="" class="card-image">
+            <img src="https://cdnfast.imfast.io/Anotaci%C3%B3n%202020-06-13%20142945.png" alt="" class="card-image">
             <div class="card-description">
               <div class="card-content">
                 <h2 class="card-title">
-                  Restaurant
+                  Task Manager
                 </h2>
                 <p class="card-subtitle">
-                  Single Web Application
+                  JavaScript Application 
                 </p>
                 <p class="card-text">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque ac quam metus. Curabitur et 
+                  Modularized using Webpack as a static module bundler and between other technologies.
                 </p>
               </div>
               <div class="card-extra">
-                <a href="#" class="card-extra__link">Live Preview <i data-feather="chevron-right"></i></a>
-                <a href="#" class="card-extra__link">Source Code <i data-feather="chevron-right"></i></a>
+                <a href="https://ivanderlich.github.io/to-do/" class="card-extra__link">Live Preview <i data-feather="chevron-right"></i></a>
+                <a href="https://github.com/SantiagoGuerra/to-do" class="card-extra__link">Source Code <i data-feather="chevron-right"></i></a>
     
               </div>
             </div>
