--- a/src/index.html
+++ b/src/index.html
@@ -124,8 +124,8 @@
                 </p>
               </div>
               <div class="card-extra">
-                <a href="#" class="card-extra__link">Live Preview <i data-feather="chevron-right"></i></a>
-                <a href="#" class="card-extra__link">Source Code <i data-feather="chevron-right"></i></a>
+                <a href="https://runner-js.netlify.app/" class="card-extra__link">Live Preview <i data-feather="chevron-right"></i></a>
+                <a href="https://github.com/SantiagoGuerra/runner-js" class="card-extra__link">Source Code <i data-feather="chevron-right"></i></a>
     
               </div>
             </div>
